[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/entities/class_projectile.gd" type="Script" id=1]
[ext_resource path="res://art/projectile/circle_03.png" type="Texture" id=3]
[ext_resource path="res://art/projectile/circle_02.png" type="Texture" id=4]
[ext_resource path="res://art/projectile/circle_05.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 12 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "magical_overlay",
"speed": 8.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "magical_underlay",
"speed": 5.0
} ]

[node name="Projectile" type="Area2D"]
script = ExtResource( 1 )

[node name="ProjectileCollision" type="CollisionShape2D" parent="."]
position = Vector2( 12, 12 )
shape = SubResource( 1 )

[node name="ProjectileLifespan" type="Timer" parent="."]

[node name="ProjectileVisibilityNotifier" type="VisibilityNotifier2D" parent="."]

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="ProjAnim_TopLayer" type="AnimatedSprite" parent="SpriteHolder"]
frames = SubResource( 2 )
animation = "magical_overlay"

[node name="ProjAnim_BottomLayer" type="AnimatedSprite" parent="SpriteHolder"]
frames = SubResource( 3 )
animation = "magical_underlay"
playing = true
[connection signal="timeout" from="ProjectileLifespan" to="." method="_on_ProjectileLifespan_timeout"]
[connection signal="screen_exited" from="ProjectileVisibilityNotifier" to="." method="_on_ProjectileVisibilityNotifier_screen_exited"]
